# PublicHolidayOnDayOfWeek

./: .cursor_rules.json  .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  TaipyLessonsLearned.md  containerization_analysis.md  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: aws-practices.mdc  aws-practices.rule  project-standards.mdc  project-standards.rule  python-style.mdc  python-style.rule  terraform-practices.mdc  testing-standards.mdc  testing-standards.rule  type-checking.mdc  type-checking.rule
scripts/: docker-manage.sh
src/: example.py  web_interface.py
src/public_holiday_analyzer/: __init__.py  analyzer.py
tests/: conftest.py  test_analyzer.py  test_web_interface.py
