[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "public_holiday_analyzer"
version = "0.1.0"
description = "A Python package for analyzing German public holidays"
requires-python = ">=3.8"
dependencies = [
    "python-dateutil>=2.8.2",
    "holidays>=0.38",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"] 